--- a/src/App.css
+++ b/src/App.css
@@ -26,11 +26,15 @@
 }
 
 .navigation {
-  margin-top: 20px;
+  margin-top: 10px; 
 }
 
 button {
-  margin: 0 10px;
+  margin: 0 5px; 
   padding: 10px 20px;
   font-size: 16px;
+}
+
+h4 {
+  margin: 5px 0; 
 }
